--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/pooria98">Pouria</a>.
+    Coded by <a href="https://github.com/pooria98" target="_blank">Pouria Kheiri</a>.
   </div>
 
   <script src="main.js"></script>
